# simple-rapi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  entrypoint.sh
migrations/: 01-create-items.sql
postgres/: Dockerfile  read-sec.sh
proto/: item.proto
src/: main.rs
