[package]
name = "simple-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
# config = "0.13"
docker_secrets = "0.1"
prost = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
tonic = "0.10.2"
uuid = { version = "1.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.10.2"